--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -3,6 +3,6 @@
   "tab_categories": "Categorías",
   "tab_profile": "Perfil",
   "tab_notifications": "Notificaciones",
-  "tab_bag": "Bolso",
+  "categories": "Kateqoriyalar",
   "title_select_language": "Ana Səhifə"
 }
