--- a/assets/locale/localization_ru.json
+++ b/assets/locale/localization_ru.json
@@ -3,6 +3,6 @@
   "tab_categories": "Categorías",
   "tab_profile": "Perfil",
   "tab_notifications": "Notificaciones",
-  "tab_bag": "Bolso",
+  "categories": "Kатегории",
   "title_select_language": "домашняя страница"
 }
