--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -1,3 +1,4 @@
+//Flutter doesnt support Azerbiajani language, Turkish Lang code is used.
 {
   "tab_home": "Casa",
   "tab_categories": "Categorías",
