--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -3,6 +3,13 @@
   "tab_categories": "Categorías",
   "tab_profile": "Perfil",
   "tab_notifications": "Notificaciones",
+  "title_select_language": "Ana Səhifə",
   "categories": "Kateqoriyalar",
-  "title_select_language": "Ana Səhifə"
+  "wish_list":"Seçilmiş məhsullar",
+  "order_history":"Sifariş tarixçəsi",
+  "notifications":"Bildirişlər",
+  "delivery_terms":"Çatdırılma şərtləri",
+  "fag":"Sual Cavab",
+  "about_us":"Şirkət haqqında",
+  "contact_us":"Əlaqə məlumatları"
 }
