--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -11,5 +11,6 @@
   "delivery_terms":"Delivery Terms",
   "fag":"FAG",
   "about_us":"About Company",
-  "contact_us":"Contacts"
+  "contact_us":"Contacts",
+  "complaints":"Complaints"
 }
