--- a/assets/locale/localization_ru.json
+++ b/assets/locale/localization_ru.json
@@ -11,5 +11,6 @@
   "delivery_terms":"Условия доставки",
   "fag":"Вопрос/Ответ ",
   "about_us":"О Компании",
-  "contact_us":"Контакты"
+  "contact_us":"Контакты",
+  "complaints":"Жалобы и предложения"
 }
