--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -11,5 +11,7 @@
   "delivery_terms":"Çatdırılma şərtləri",
   "fag":"Sual Cavab",
   "about_us":"Şirkət haqqında",
-  "contact_us":"Əlaqə məlumatları"
+  "contact_us":"Əlaqə məlumatları",
+  "complaints":" Təklif və Şikayətlər"
+
 }
