--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -9,8 +9,91 @@
   "order_history":"Order History",
   "notifications":"Notifications",
   "delivery_terms":"Delivery Terms",
-  "fag":"FAG",
   "about_us":"About Company",
   "contact_us":"Contacts",
-  "complaints":"Complaints"
+  "complaints":"Complaints",
+  "english":"English",
+  "yes":"Yes",
+  "no":"No",
+  "info":" Information",
+  "saleof":" Sale of alcoholic beverages by PORTAL to minors (persons below 18 years of age) is prohibited. When a customer orders an order. Customer’s identity will be determined based on the relevant document (ID card). In the event that if customer is under the age of 18, the sale of goods to the customer will be discontinued.",
+  "checkout":"Checkout",
+  "close":" Close",
+  "accept":"Accept",
+  "confirm_order":"Confirm Order",
+  "delivery_address":"Delivery Address",
+  "name":"Name",
+  "surname":"Surname",
+  "mobile":"Mobile",
+  "email":"Email",
+  "dob":"Date of birth",
+  "username":"Username",
+  "time":"Time",
+  "next":"Next",
+  "payment_option":"Payment Option",
+  "shop_list":"Shopping List",
+  "sub_total_price":"Subtotal Price",
+  "delivery_price":"Delivery Price",
+  "fast_delivery1":"Fast Delivery",
+  "fag":"F.A.G",
+  "got_answer":"Got answer",
+  "settings":"Settings",
+  "login":"Login",
+  "forget_pass":"Forgot your password?",
+  "connect_with":"Connect with",
+  "dont_account":"Don’t have an account?",
+  "sign_up":"Sign up",
+  "subtotal":"Subtotal",
+  "total":"Total",
+  "view_profile":"View Profile",
+  "no_product":"Product is not found.",
+  "send":"Send",
+  "no_internet":"Slow or no internet connection.",
+  "internet_settings":"Please check your internet settings",
+  "try_again":"Try Again",
+  "thank you":"Thank You!",
+  "your_transaction":"Your transaction was successful",
+  "profile_photo":"Profile Photo",
+  "processing":"Processing …",
+  "camera":"Camera",
+  "gallery":"Gallery",
+  "total_price":"Total Price",
+  "save_changes":" Do you want to save changes?",
+  "rate_app":"How do you rate our app?",
+  "review":"Write a Review",
+  "amount_1":"Delivery amount 4 AZN. When ordering from 20 AZN delivery is free.",
+  "amount_2":"Delivery amount 4 AZN.",
+  "amount_3":"Delivery amount 7 AZN.",
+  "select_lang":"Select Language",
+  "please_fill":"Please fill all fields.",
+  "save":"Save",
+  "russian":" Russian",
+  "az":"Azerbaijani",
+  "add_to_cart":" Add to Cart",
+  "sign_out":"Sign Out",
+  "time_1":"11:30-13:00",
+  "time_2":"13:00-19:30",
+  "time_3":"Fast Delivery",
+  "time_4": "Store Pick-up",
+  "female":  "Female",
+  "male": "Male",
+  "order_1":"Name: A-Z",
+  "order_2":"Name: Z-A",
+  "order_3":"Cheap-Expensive",
+  "order_4":" Expensive-Cheap",
+  "fast_delivery2":"For fast delivery, 2 (icon) will be added to the cost.",
+  "poor":"Poor",
+  "normal":" Normal",
+  "good":" Good",
+  "reason_review":" What is the reason your review?",
+  "payment":" Payment",
+  "address":"Address",
+  "online_payment":"Online Payment",
+  "on_delivery":"On Delivery",
+  "delivery_time":"Delivery Time",
+  "satisfy":"Are you satisfied with the service provided?",
+  "new_address":"Please add new address",
+  "select_camera":"You select camera image :",
+  "suggestion_or_complaint":"Suggestion or Complaint",
+  "enter_phonenumber":"Enter phone number or email"
 }
