--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -6,12 +6,94 @@
   "title_select_language": "Ana Səhifə",
   "categories": "Kateqoriyalar",
   "wish_list":"Seçilmiş məhsullar",
-  "order_history":"Sifariş tarixçəsi",
+  "order_history":"Ödəniş Tarixcəsi",
   "notifications":"Bildirişlər",
   "delivery_terms":"Çatdırılma şərtləri",
-  "fag":"Sual Cavab",
   "about_us":"Şirkət haqqında",
   "contact_us":"Əlaqə məlumatları",
-  "complaints":" Təklif və Şikayətlər"
-
+  "complaints":" Təklif və Şikayətlər",
+  "english":"İngilis",
+  "no":"Xeyir",
+  "yes": "Bəli",
+  "info":"Məlumat",
+  "saleof":"Yetkinlik yaşına çatmayan şəxslərə (18 yaşdan aşağı olan şəxslər) PORTAL vasitəsi ilə spirtli içkilərin satışı qadağandır. Sifarişçi tərəfindən sifariş çatdırılan zaman ALICI-nın şəxsiyyəti müvafiq sənədə (şəxsiyyət vəsiqəsinə) əsasən müəyyən olunacaq. ALICI 18 yaşından aşağı şəxs olduqda sifarişçiyə mal satışı dayandırılacaq.",
+  "checkout":"Yekunlaşdır",
+  "close":"Bağla",
+  "accept":"Qəbul et",
+  "confirm_order":"Sifarişi təstiq et",
+  "delivery_address":"Çatdırılma ünvanı",
+  "name":"Ad",
+  "surname":"Soyad",
+  "mobile":"Telefon",
+  "email":"Email",
+  "dob":"Doğum tarixi",
+  "username":"İstifadə adı",
+  "time":"Vaxt",
+  "next":"Növbəti",
+  "payment_option":"Ödəniş Seçimi",
+  "shop_list":"Alış-Veriş səbəti",
+  "sub_total_price":"Toplam qiymət",
+  "delivery_price":"Çatdırılma Qiyməti",
+  "fast_delivery1":"Sürətli Çatdırılma",
+  "fag":"F.A.G",
+  "got_answer":"Cavab",
+  "settings":"Tənzimləmələr",
+  "login":"Daxil ol",
+  "forget_pass":"Sifrəni unutmusan?",
+  "connect_with":"Daxil ol",
+  "dont_account":"Hesabınız yoxdur?",
+  "sign_up":"Qeydiyyatdan keç",
+  "subtotal":"Yekun",
+  "total":"Cəmi",
+  "view_profile":"Profilə bax",
+  "no_product":"Məhsul tapilmadı",
+  "send":"Göndər",
+  "no_internet":"Zəif və ya internet bağlantısı yoxdur.",
+  "internet_settings":"İnternet bağlantısını yoxlayın.",
+  "try_again":"Yenidən cəhd edin.",
+  "thank you":"Təşəkkurlər!",
+  "your_transaction":"Əməliyyatınız uğurlu həyata keçmişdir.",
+  "profile_photo":"Profil şəkli",
+  "processing":"Emal olunur ...",
+  "camera":"Kamera",
+  "gallery":"Qalereya",
+  "total_price":"Yekun Qiymət",
+  "save_changes":"Dəyişiklikləri saxlamaq istəyirsiniz?",
+  "rate_app":"Tətbiqimizi necə qiymətləndirirsiniz?",
+  "review":"Rəy yazın",
+  "amount_1":"Çatdırılma məbləği 4 AZN. 20 AZN-dən yuxarı sifariş verdikdə çatdırılma pulsuzdur.",
+  "amount_2":"Çatdırılma məbləği 4 AZN.",
+  "amount_3":"Çatdırılma məbləği  7 AZN",
+  "select_lang":"Dil seçin",
+  "please_fill":"Zəhmət olmasa, bütün sahələri doldurun.",
+  "save":"Yadda Saxla",
+  "russian":"Rus",
+  "az":"Azərbaycan",
+  "add_to_cart":"Səbətə əlavə et",
+  "sign_out":"Çıx",
+  "time_1":"11:30-13:00",
+  "time_2":"13:00-19:30",
+  "time_3":"Sürətli Çatdırılma",
+  "time_4": "Mağazadan götür",
+  "female":  "Qadın",
+  "male": "Kişi",
+  "order_1":"Adı: A-Z",
+  "order_2":"Adı: Z-A",
+  "order_3":"Ucuz-Bahalı",
+  "order_4":" Bahalı-Ucuz",
+  "fast_delivery2":"For fast delivery, 2 (icon) will be added to the cost,.",
+  "poor":"Pis",
+  "normal":" Normal",
+  "good":" Yaxşı",
+  "reason_review":"Baxmağınızın səbəbi nədir?",
+  "payment":" Ödəniş",
+  "address":"Ünvan",
+  "online_payment":"Onlayn ödəniş",
+  "on_delivery":"Çatdırılma zamanı",
+  "delivery_time":"Çatdırılma müddəti",
+  "satisfy":"Göstərilən xidmətdən razısınız?",
+  "new_address":"Zəhmət olmasa yeni ünvan əlavə edin",
+  "select_camera":"Kamera görüntüsünü seçin:",
+  "suggestion_or_complaint":"Təklif və ya şikayət",
+  "enter_phonenumber":"Telefon nömrəsi və ya e-poçt daxil edin"
 }
