--- a/assets/locale/localization_ru.json
+++ b/assets/locale/localization_ru.json
@@ -12,5 +12,96 @@
   "fag":"Вопрос/Ответ ",
   "about_us":"О Компании",
   "contact_us":"Контакты",
-  "complaints":"Жалобы и предложения"
+  "complaints":"Жалобы и предложения",
+  "english":
+  "no":
+  "info":
+  "saleof":
+  "checkout":
+  "close":
+  "accept":
+  "confirm_order":
+  "delivery_address":
+  "name":
+  "surname":
+  "mobile":
+  "email":
+  "dob":
+  "username":
+  "time":
+  "next":
+  "payment_option":
+  "shop_list":
+  "sub_total_price":
+  "delivery_price":
+  "fast_delivery":
+  "fag":
+  "got_answer":
+  "settings":
+  "login":
+  "forget_pass":
+  "connect_with":
+  "dont_account":
+  "sign_up":
+  "subtotal":
+  "total":
+  "checkout":
+  "view_profile":
+  "no_product":
+  "send":
+  "no_internet":
+  "internet_settings":
+  "try_again":
+  "thank you":
+  "your_transaction":
+  "profile_photo":
+  "processing":
+  "camera":
+  "gallery":
+  "total_price":
+  "save_changes":
+  "rate_app":
+  "review":
+  "amount_1":
+  "amount_2":
+  "amount_3":
+  "select_lang":
+  "please_fill":
+  "save":
+  "russian":
+  "az":
+  "profile_photo":
+  "add_to_cart":
+  "sign_up":
+  "sign_out":
+  "time_1":
+  "time_2":
+  "time_3":
+  "time_4":
+  "female":
+  "male":
+  "order_1":
+  "order_2":
+  "order_3":
+  "order_4":
+  "fast_delivery":
+  "poor":
+  "normal":
+  "good":
+  "reason_review":
+  "payment":
+  "address":
+  "online_payment":
+  "on_delivery":
+  "delivery_time":
+  "satisfy":
+  "new_address":
+  "select_camera":
+  "suggestion_or_complaint":
+  "enter_phonenumber",:
+
+
+
+
+
 }
