--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -61,9 +61,11 @@
   "save_changes":" Do you want to save changes?",
   "rate_app":"How do you rate our app?",
   "review":"Write a Review",
+  "amount_0":"Your delivery is free.",
   "amount_1":"Delivery amount 4 AZN. When ordering from 20 AZN delivery is free.",
   "amount_2":"Delivery amount 4 AZN.",
   "amount_3":"Delivery amount 7 AZN.",
+  "amount_4":"No delivery to this region yet",
   "select_lang":"Select Language",
   "please_fill":"Please fill all fields.",
   "save":"Save",
