--- a/assets/locale/localization_ru.json
+++ b/assets/locale/localization_ru.json
@@ -61,9 +61,11 @@
   "save_changes": "Общая стоимость\nХотите сохранить изменения?",
   "rate_app": "Как вы оцениваете наше приложение?",
   "review": "Написать отзыв",
+  "amount_0": "Ваша доставка бесплатна.",
   "amount_1": "Сумма доставки 4 AZN. При заказе от 20 AZN доставка бесплатна.",
   "amount_2": "Сумма доставки 4 AZN.",
   "amount_3": "Сумма доставки 7 AZN",
+  "amount_4": "В данный район доставка пока не осуществляется",
   "select_lang": "Выберите язык",
   "please_fill": "Пожалуйста, заполните все поля.",
   "save": "Сохранить",
