--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -61,9 +61,11 @@
   "save_changes":"Dəyişiklikləri saxlamaq istəyirsiniz?",
   "rate_app":"Tətbiqimizi necə qiymətləndirirsiniz?",
   "review":"Rəy yazın",
+  "amount_0":"Çatdırılma pulsuzdur.",
   "amount_1":"Çatdırılma məbləği 4 AZN. 20 AZN-dən yuxarı sifariş verdikdə çatdırılma pulsuzdur.",
   "amount_2":"Çatdırılma məbləği 4 AZN.",
   "amount_3":"Çatdırılma məbləği  7 AZN",
+  "amount_4":"Seçdiyiniz əraziyə hal hazırda çatdırılma yoxdur.",
   "select_lang":"Dil seçin",
   "please_fill":"Zəhmət olmasa, bütün sahələri doldurun.",
   "save":"Yadda Saxla",
