--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -91,7 +91,7 @@
   "payment":" Ödəniş",
   "address":"Ünvan",
   "online_payment":"Onlayn ödəniş",
-  "on_delivery":"Nağd ödəniş",
+  "on_delivery":"Yerində ödəniş",
   "delivery_time":"Çatdırılma müddəti",
   "satisfy":"Göstərilən xidmətdən razısınız?",
   "new_address":"Zəhmət olmasa yeni ünvan əlavə edin",
