--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -51,7 +51,7 @@
   "no_internet":"Slow or no internet connection.",
   "internet_settings":"Please check your internet settings",
   "try_again":"Try Again",
-  "thank you":"Thank You!",
+  "thank_you":"Thank You!",
   "your_transaction":"Your transaction was successful",
   "profile_photo":"Profile Photo",
   "processing":"Processing …",
@@ -83,7 +83,7 @@
   "order_2":"Name: Z-A",
   "order_3":"Cheap-Expensive",
   "order_4":" Expensive-Cheap",
-  "fast_delivery2":"For fast delivery, 2 (icon) will be added to the cost.",
+  "fast_delivery2":"For fast delivery, 2 AZN will be added to the cost.",
   "poor":"Poor",
   "normal":" Normal",
   "good":" Good",
