--- a/assets/locale/localization_ru.json
+++ b/assets/locale/localization_ru.json
@@ -51,7 +51,7 @@
   "no_internet": "Медленно или нет подключения к интернету.",
   "internet_settings": "Пожалуйста, проверьте настройки интернета.",
   "try_again": "Попробуй еще раз",
-  "thank you": "Спасибо!",
+  "thank_you": "Спасибо!",
   "your_transaction": "Ваша транзакция прошла успешно",
   "profile_photo": "Фотография профиля",
   "processing": "Обработка ...",
