--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -51,7 +51,7 @@
   "no_internet":"Zəif və ya internet bağlantısı yoxdur.",
   "internet_settings":"İnternet bağlantısını yoxlayın.",
   "try_again":"Yenidən cəhd edin.",
-  "thank you":"Təşəkkurlər!",
+  "thank_you":"Təşəkkurlər!",
   "your_transaction":"Əməliyyatınız uğurlu həyata keçmişdir.",
   "profile_photo":"Profil şəkli",
   "processing":"Emal olunur ...",
