--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -5,7 +5,7 @@
   "tab_notifications": "Notifications",
   "title_select_language": "Home",
   "categories": "Categories",
-  "wish_list":"Selected Products",
+  "wish_list":"Wishlist",
   "order_history":"Order History",
   "notifications":"Notifications",
   "delivery_terms":"Delivery Terms",
