--- a/assets/locale/localization_ru.json
+++ b/assets/locale/localization_ru.json
@@ -97,5 +97,38 @@
   "new_address": "Пожалуйста, добавьте новый адрес",
   "select_camera": "Выберите изображение с камеры:",
   "suggestion_or_complaint": "Предложение или жалоба",
-  "enter_phonenumber": "Введите номер телефона или адрес электронной почты"
+  "enter_phonenumber": "Введите номер телефона или адрес электронной почты",
+
+
+  "welcome": "Добро пожаловать в Кеndden Shehere",
+  "sign_in_continue": "Войдите, чтобы продолжить",
+  "enter_username": "Введите ваше имя пользователя",
+  "password": "пароль",
+  "enter_pass": "Введите свой пароль",
+  "or": "или",
+  "sign_up_for": "ПОДПИСАТЬСЯ НА АККАУНТ?",
+  "enter_name": "Введите ваше имя",
+  "enter_surname": "введите свою фамилию",
+  "enter_password": "Введите свой пароль",
+  "verify_pass": "Подтвердите ваш пароль",
+  "repeat_pass": "Повторите пароль",
+  "verify_account": "Подтвердить аккаунт",
+  "please_send": "Пожалуйста, отправьте проверочный код, который мы отправили на ваш номер телефона",
+  "pin_wrong": "Пин-код неправильный.",
+  "campaigns": "Кампании",
+  "show_more": "Показать больше",
+  "campaign": "КАМПАНИЯ",
+  "current_order": "Текущий заказ",
+  "start_shopping": "НАЧАТЬ ШОППИНГ",
+  "wishlist_empty": "Ваш список пожеланий пуст!",
+  "explore": "исследовать больше и выбирать некоторые предметы",
+  "enter_dob": "Введите свой день рождения",
+  "enter_mobile": "Введите номер телефона",
+  "enter_address": "Введите свой адрес",
+  "future_delivery": "Ваш заказ будет доставлен завтра",
+  "my_cart": "Моя корзина",
+  "support": "Поддержка",
+  "looking_for": "Что вы ищете?",
+  "profile": "Профиль"
+
 }
