--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -97,5 +97,36 @@
   "new_address":"Zəhmət olmasa yeni ünvan əlavə edin",
   "select_camera":"Kamera görüntüsünü seçin:",
   "suggestion_or_complaint":"Təklif və ya şikayət",
-  "enter_phonenumber":"Telefon nömrəsi və ya e-poçt daxil edin"
+  "enter_phonenumber":"Telefon nömrəsi və ya e-poçt daxil edin",
+
+  "welcome": "Kendden Shehere xoş gəlmisiniz",
+  "sign_in_continue": "Davam etmək üçün daxil olun",
+  "enter_username": "İstifadəçi adınızı daxil edin",
+  "password": "ŞIFRƏ",
+  "enter_pass": "Parolunuzu daxil edin",
+  "or": "və ya",
+  "sign_up_for": "HESAB ÜÇÜN İMZALAYIN?",
+  "enter_name": "Adınızı daxil edin",
+  "enter_surname": "Soyadınızı daxil edin",
+  "enter_password": "Şifrənizi daxil edin",
+  "confirm_pass": "Şifrənizi təsdiq edin",
+  "repeat_pass": "Şifrəni təkrar et",
+  "verify_account": "Hesabı doğrulayın",
+  "please_send": "Zəhmət olmasa telefon nömrəmizə göndərdiyimiz təsdiqləmə kodunu göndərin",
+  "pin_wrong": "Pin kodu səhvdir.",
+  "campaigns": "Kampaniyalar",
+  "show_more": "Daha çox göstər",
+  "campaign": "KAMPANİYA",
+  "current_order": "Cari Sifariş",
+  "start_shopping": "START SHOPPING",
+  "wishlist_empty": "İstək siyahısınız boşdur!",
+  "explore": "Daha çox araşdırın və bəzi maddələrin siyahısına salın",
+  "enter_dob": "Ad gününüzü daxil edin",
+  "enter_mobile": "Telefon nömrənizi daxil edin",
+  "enter_address": "Ünvanınızı daxil edin",
+  "tomorrow_delivery": "Sifarişiniz sabah çatdırılacaq",
+  "my_cart": "Səbətim",
+  "support": "Dəstək",
+  "looking_for": "Nə axtarırsınız?",
+  "profile": "Profil"
 }
