dialog on delete added

--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -129,7 +129,8 @@
   "my_cart": "My Cart",
   "support":"Support",
   "looking_for": "What are you looking for?",
-  "profile":"Profile"
+  "profile":"Profile",
+  "are_you": "Are you sure you want to delete It?"
 
 
 
