dialog on delete added

--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -130,7 +130,8 @@
   "support":"Support",
   "looking_for": "What are you looking for?",
   "profile":"Profile",
-  "are_you": "Are you sure you want to delete It?"
+  "are_you": "Are you sure you want to delete It?",
+  "are_sure_signout": "Are you sure you want to SIGN OUT"
 
 
 
