--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -131,7 +131,8 @@
   "looking_for": "What are you looking for?",
   "profile":"Profile",
   "are_you": "Are you sure you want to delete It?",
-  "are_sure_signout": "Are you sure you want to SIGN OUT"
+  "are_sure_signout": "Are you sure you want to SIGN OUT",
+  "no_product_search": "NO RESULT FOUND.\nWE CAN'T FIND ANY ITEM MATCHING YOUR SEARCH."
 
 
 
