--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -128,5 +128,11 @@
   "my_cart": "Səbətim",
   "support": "Dəstək",
   "looking_for": "Nə axtarırsınız?",
-  "profile": "Profil"
+  "profile": "Profil",
+  "wp": "WhatsApp-a yazın",
+  "call": "Bizə zəng edin",
+  "insta": "Bizi Instagramda izləyin",
+  "fb":"Bizi Facebookda izləyin",
+  "email": "Təklif və şikayətləriniz üçün"
+
 }
