--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -139,6 +139,7 @@
   "enter_new_pass": "Enter your new  password",
   "confirm_new_pass":"CONFIRM NEW PASSWORD",
   "enter_new_confirm_pass": "Confirm new password",
-  "change_pass":"CHANGE PASSWORD"
-
+  "change_pass":"CHANGE PASSWORD",
+  "pass_reset": "Password Reset Email Sent",
+  "enter_email": "Enter your email"
 }
