--- a/assets/locale/localization_tr.json
+++ b/assets/locale/localization_tr.json
@@ -133,6 +133,6 @@
   "call": "Bizə zəng edin",
   "insta": "Bizi Instagramda izləyin",
   "fb":"Bizi Facebookda izləyin",
-  "email": "Təklif və şikayətləriniz üçün"
+  "email_t": "Təklif və şikayətləriniz üçün"
 
 }
